# my.github

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: BeastMode_v1.agent.md  beast-mode.agent.md  diagram-editor.agent.md  general-implementer.agent.md  git-operator.agent.md  spec-maintainer.agent.md  test-architect.agent.md
.github/hooks/: README.md  copilot-cli-policy.json
.github/instructions/: architecture.instructions.md  diagrams.instructions.md  docs.instructions.md  env.instructions.md  git.instructions.md  notebook.instructions.md  python.instructions.md  tests.instructions.md
.github/prompts/: create-python-ml-research-environment.prompt.md  create-react-native-environment.prompt.md  implement-change.prompt.md  pre-merge-review.prompt.md  review-code.prompt.md  sync-docs.prompt.md  update-tests.prompt.md
clip-search-engine/: .gitignore  README.md  __init__.py  __main__.py  cli.py  clip_model.py  run.py  search_engine.py  test_engine.py  vector_db.py  video_processor.py  web_app.py
clip-search-engine/db/: .gitignore
docs/adr/: README.md
docs/architecture/: README.md
docs/glossary/: README.md
docs/regressions/: README.md
docs/runbooks/: README.md
docs/specs/: README.md
notebooks/: 01_YOLOv26を試す.ipynb  02_CLIP画像動画検索エンジンを試す.ipynb
project/environment/: command-matrix.md  compatibility-matrix.md  detected-environment.md  environment.yaml
tests/: README.md
tests/contract/: README.md
tests/e2e/: README.md
tests/fixtures/: README.md
tests/golden/: README.md
tests/helpers/: README.md
(+48 files in other folders)
