[project]
name = "ml-project"
version = "0.1.0"
description = "機械学習のための新モデルの開発・構築・デプロイ"
requires-python = ">=3.11"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "numpy",
    "matplotlib",
    "ultralytics>=8.4.12",
    "transformers[torch]>=4.57.6,<5.0.0",
    "sentencepiece>=0.2.1",
    "pillow>=12.1.0",
    "faiss-cpu>=1.13.2",
    "opencv-python>=4.13.0.92",
    "timm>=1.0.24",
    "ipykernel>=7.2.0",
    "japanize-matplotlib>=1.1.3",
    "av>=16.1.0",
    "tqdm>=4.67.3",
    "protobuf>=6.33.5",
    "gradio>=6.5.1",
]


[tool.uv.sources]
torch = [
    { index = "torch-cu126" },
]

torchvision = [
    { index = "torch-cu126" },
]


[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
